stderr
ChristmasSong.java:5: error: cannot find symbol
       List<String> dayList = List.of("first", "second", "third");
       ^
  symbol:   class List
  location: class ChristmasSong
ChristmasSong.java:5: error: cannot find symbol
       List<String> dayList = List.of("first", "second", "third");
                              ^
  symbol:   variable List
  location: class ChristmasSong
2 errors
